tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/dns/tproxy/udp_localhost_server/_test_context/ServiceEntry.3255351619.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dns
  namespace: echo-2-20468
spec:
  addresses:
  - 1.2.3.4
  endpoints: []
  hosts:
  - fake.service.local
  ports:
  - name: http
    number: 80
    protocol: HTTP
  resolution: STATIC
